# strategy-engine

./: .gitignore  README.md  pyproject.toml
scripts/: b2_cost_sensitivity.py  b5_walkforward_cost.py  init_live_signals_db.py  init_live_ticks_db.py  init_paper_trading_db.py  migrate_backtest_schema.py  migrate_reliability_tables.py  seed_strat_registry.py
scripts/launchagents/: com.matias.rotate-logs.plist  com.matias.strategy-engine.daily-detect.plist  com.matias.strategy-engine.intraday-poll.plist  com.matias.strategy-engine.paper-mtm.plist  com.matias.strategy-engine.weekly-detect.plist
strategy_engine/: __init__.py  cli.py  config.py
strategy_engine/backtest/: __init__.py  bollinger.py  breakout.py  composite.py  costs.py  momentum.py  regime.py  runner.py  trend.py  walkforward.py
strategy_engine/backtest/strat/: __init__.py  classification.py  ftfc.py  patterns.py  simulator.py
strategy_engine/live/: __init__.py  detector.py  health.py  intraday_poller.py  notification.py
strategy_engine/paper/: __init__.py  book.py  reporting.py
strategy_engine/promotion/: __init__.py  gates.py
strategy_engine/providers/: __init__.py  duckdb_provider.py
strategy_engine/registry/: __init__.py  loader.py  schema.py
tests/: test_bollinger.py  test_composite.py  test_cost_model.py  test_e2e_smoke.py  test_health_and_risk.py  test_intraday_poller.py  test_paper.py  test_regime_gate.py  test_registry.py  test_reliability.py  test_stage_e_families.py  test_strat.py
